# fv

./: Makefile  elm.json  index.html  invoice.html
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
src/: Data.elm  EditableInvoice.elm  EditableItem.elm  Inputs.elm  Invoices.elm  Main.elm  Nav.elm  Settings.elm  Styles.elm
web-client/: LICENSE  elm.json  index.html
web-client/src/: Data.elm  Dropdown.elm  Entity.elm  Inputs.elm  Invoices.elm  Settings.elm
web-server/: .gitignore  Configuration.hs  CouchdbClient.hs  Invoices.hs  Main.hs  app.yaml.secret  hie.yaml  web-server.cabal
