cabal-version:       2.4

name:                web-server
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              przemek
maintainer:          przemek@pmtsoftware.eu
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable web-server
  main-is:             Main.hs
  other-modules:       CouchdbClient, Configuration, Invoices
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively
  default-extensions:
          DataKinds
        , FlexibleContexts
        , GADTs
        , LambdaCase
        , PolyKinds
        , RankNTypes
        , ScopedTypeVariables
        , TypeApplications
        , TypeOperators
        , TypeFamilies
        , OverloadedStrings
        , DeriveGeneric
        , DuplicateRecordFields
        , TemplateHaskell
  -- other-extensions:
  build-depends:        base ^>=4.14.1.0
                        , servant-server ^>=0.18.2
                        , servant-client ^>=0.18.2
                        , http-conduit ^>=2.3.7
                        , polysemy >=1.3 && <1.4
                        , yaml ^>=0.11.5
                        , servant
                        , cookie
                        , bytestring
                        , aeson 
                        , warp
                        , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010
